repo: materialize title counters, use subquery/exists for redundant filter, add logging and prefer materialized counters; add Alembic migration

--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -29,15 +29,7 @@
                         <li><a data-target="Tags"><i class="bi bi-tags-fill mr-2"></i> Tags</a></li>
                         <li><a data-target="Activity"><i class="bi bi-clock-history mr-2"></i> Atividade</a></li>
                         <li><a data-target="Backups"><i class="bi bi-shield-check mr-2"></i> Backups</a></li>
-                        <li><a data-target="Webhooks"><i class="bi bi-plug-fill mr-2"></i> Webhooks <span
-                                    class="tag is-warning is-light is-size-9 ml-1"
-                                    style="font-size: 0.6rem;">BETA</span></a></li>
-                        <li><a data-target="Cloud"><i class="bi bi-cloud-fill mr-2"></i> Cloud Storage <span
-                                    class="tag is-warning is-light is-size-9 ml-1"
-                                    style="font-size: 0.6rem;">BETA</span></a></li>
-                        <li><a data-target="Plugins"><i class="bi bi-patch-check mr-2"></i> Plugins <span
-                                    class="tag is-warning is-light is-size-9 ml-1"
-                                    style="font-size: 0.6rem;">BETA</span></a></li>
+                        <!-- Webhooks, Cloud and Plugins removed -->
                         <li><a data-target="APIs"><i class="bi bi-cloud-arrow-down-fill mr-2"></i> APIs Externas</a>
                         </li>
                         <li><a data-target="ApiTokens"><i class="bi bi-key-fill mr-2"></i> Tokens de API</a></li>
